--- a/src/index.less
+++ b/src/index.less
@@ -1,4 +1,12 @@
 .box {
     color: palevioletred;
     font-size: 36px;
+    background: url('./static/pkq.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 320px;
+    height: 240px;
 }
