--- a/src/template/index.html
+++ b/src/template/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cli test</title>
-</head>
-<body>
-    <div id="app"></div>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>cli test</title>
+    </head>
+    <body>
+        <div id="app"></div>
+    </body>
+    <script>
+        if ("serviceWorker" in navigator) {
+            window.addEventListener("load", () => {
+                navigator.serviceWorker
+                    .register("/service-worker.js")
+                    .then((registration) => {
+                        console.log("SW registered: ", registration);
+                    })
+                    .catch((registrationError) => {
+                        console.error(
+                            "SW registration failed: ",
+                            registrationError
+                        );
+                    });
+            });
+        }
+    </script>
 </html>
