--- a/src/template/index.html
+++ b/src/template/index.html
@@ -9,16 +9,16 @@
         <div id="app"></div>
     </body>
     <script>
-        if ("serviceWorker" in navigator) {
-            window.addEventListener("load", () => {
+        if ('serviceWorker' in navigator){
+            window.addEventListener('load', () => {
                 navigator.serviceWorker
-                    .register("/service-worker.js")
-                    .then((registration) => {
-                        console.log("SW registered: ", registration);
+                    .register('/service-worker.js')
+                    .then(() => {
+                        console.log('SW registered: ');
                     })
                     .catch((registrationError) => {
                         console.error(
-                            "SW registration failed: ",
+                            'SW registration failed: ',
                             registrationError
                         );
                     });
