--- a/src/container/app.less
+++ b/src/container/app.less
@@ -2,3 +2,17 @@
     font-size: 30px;
     color: chocolate;
 }
+
+.add, .minus {
+    cursor: pointer;
+    border: 1px solid lightblue;
+    margin-right: 15px;
+    padding: 10px;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+}
+
+.controller {
+    display: flex;
+}
