--- a/src/container/app.less
+++ b/src/container/app.less
@@ -16,3 +16,34 @@
 .controller {
     display: flex;
 }
+
+.container-div {
+    border: 1px solid red;
+}
+
+.normal-div {
+    width: 100px;
+    height: 100px;
+    background: lightcoral;
+    margin: 10px;
+    color: yellow;
+}
+
+.div2 {
+    width: 100px;
+    height: 100px;
+    background: lightblue;
+    margin: 10px;
+}
+
+.float-div {
+    width: 100px;
+    height: 100px;
+    background: yellow;
+    float: left;
+}
+
+.bfc {
+    overflow: hidden;
+    margin: 50px;
+}
