refact: add asyncComponent add express dist

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -6,23 +6,6 @@
         <title>cli test</title>
     </head>
     <body>
-        <div id="app"></div>
+        <div id="root"></div>
     </body>
-    <script>
-        if ("serviceWorker" in navigator) {
-            window.addEventListener("load", () => {
-                navigator.serviceWorker
-                    .register("/service-worker.js")
-                    .then((registration) => {
-                        console.log("SW registered: ", registration);
-                    })
-                    .catch((registrationError) => {
-                        console.error(
-                            "SW registration failed: ",
-                            registrationError
-                        );
-                    });
-            });
-        }
-    </script>
 </html>
